# lib_ilo

./: .gitattributes  .gitignore  Makefile  README.md  flake.nix  include  library.json  main.c  warning_flags.txt
.github/workflows/: generate_artefacts.yml  makefile.yml  pio.yml  publish_to_pub.yml  publish_to_pypi.yml
artefacts/: trames.json
artefacts/cpp/: trame_builder.cpp
artefacts/docs/: trames.rst
artefacts/python/: trame_builder.py  trame_builder.rst
bindings/cpp/: library.json
bindings/cpp/include/: ilo.hpp
bindings/cpp/src/: common.hpp  ilo.cpp  led.cpp  motor.cpp  other.cpp  sensors.cpp
bindings/flutter/: pubspec.yaml
bindings/flutter/lib/: ilo_flutter.dart
bindings/flutter/lib/src/: communication_service.dart  ilo_lib.dart  msg_parser.dart  robot_status.dart  (+1 more)
bindings/python/: .gitignore  ilo_binding.pyi  ilo_binding_ext.pyi  setup.cfg  setup.py
bindings/python/ilo_binding/: __init__.py  module.c  trame_builder.py
bindings/python/ilo_binding_ext/: module.c
docs/: Makefile  conf.py  index.rst
docs/api/: index.rst  trames.rst
docs/api/python/: trame_builder.rst
generators/: generate-trame-json.c  generate_primitives.py
generators/templates/cpp/: trame_builder.cpp.jinja
generators/templates/docs/: trames.rst.jinja
generators/templates/flutter/: trame_builder.dart.jinja
generators/templates/python/: trame_builder.py.jinja  trame_builder.rst.jinja  trames.py.jinja
src/: stringify_trame_param.c  trame.c  trame.h  util.c  util.h
tests/cpp/: platformio.ini
tests/cpp/lib/: lib_ilo
tests/cpp/src/: main.cpp
