[metadata]
name = ilo_binding
version = 0.0.1
description = Python binding for the ilo protocol
author = Sigmanificient
author_email = yohann.boniface@epitech.eu
license = MIT
platform = unix, linux, osx
classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 3 :: Only
  Programming Language :: C

[options]
python_requires = >=3.8
